--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.4",
+    "react-query": "^3.39.2",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " set PORT=4000 && react-scripts start",
+    "json:server": "json-server --watch db.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-table": "^7.7.14",
+    "tailwindcss": "^3.2.4"
   }
 }
