--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
-    "dotenv": "^16.0.3",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -49,6 +48,9 @@
   },
   "devDependencies": {
     "@types/react-table": "^7.7.14",
-    "tailwindcss": "^3.2.4"
+    "dotenv": "^16.0.3",
+    "tailwindcss": "^3.2.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
